# rager

./: .gitignore  Cargo.toml  README.md  rager.toml  reqs.txt  shell.nix
.github/workflows/: build.yaml
src/: completion.rs  config.rs  entry.rs  errors.rs  filter.rs  linear.rs  main.rs  prune.rs  search.rs  sync.rs  view.rs
