[package]
name = "rager"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = "0.11.5"
minus = { version = "4.0.3", features = ["static_output", "search"] }
tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }
clap = "2.33.3"
regex = "1.5.4"
dirs = "4.0.0"
futures = "0.3.17"
chrono = "0.4.19"
requestty = "0.1.3"
toml = "0.5.8"
lazy_static = "1.4.0"
