[package]
name = "rager"
version = "0.4.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
minus = { version = "5.0.3", features = ["static_output", "search"] }
# minus = { path = "./minus", features = ["static_output", "search"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
clap = "3.1.8"
regex = "1.5.5"
dirs = "4.0.0"
futures = "0.3.21"
chrono = "0.4.19"
requestty = "0.3.0"
toml = "0.5.8"
lazy_static = "1.4.0"
thiserror = "1.0.32"

[profile.githubrelease]
inherits = "release"
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
